--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,99 @@
+@font-face{
+	font-family: "PT Sans";
+	src: url(../fonts/PT_Sans/PT_Sans-Web-Bold.ttf);
+	src: url(../fonts/PT_Sans/PT_Sans-Web-BoldItalic.ttf);
+	src: url(../fonts/PT_Sans/PT_Sans-Web-Italic.ttf);
+	src: url(../fonts/PT_Sans/PT_Sans-Web-Regular.ttf);
+}
+
+@font-face{
+	font-family: "Cormorant Infant";
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-Bold.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-BoldItalic.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-Italic.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-Light.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-LightItalic.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-Medium.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-MediumItalic.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-Regular.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-SemiBold.ttf);
+	src: url(../fonts/Cormorant_Infant/CormorantInfant-SemiBoldItalic.ttf);
+}
+
 html, body{
 	margin: 0;
+	padding: 0;
+}
+
+.top-line{
+	text-align: center;
+}
+
+h1{
+	font-family: "Cormorant Infant";
+	color: #262626;
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 36px;
+	letter-spacing: 0.18px;
+}
+
+.top-paragraph{
+	color: #595959;
+	font-family: "Cormorant Infant";
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 24px;
+	letter-spacing: 0.08px;
+}
+
+.wraper{
+	margin: 0 auto;
+}
+
+.menu{
+	
+}
+
+.top-menu{
+	 display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: space-between;
+    -ms-flex-line-pack: justify;
+    align-content: space-between;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.tap{
+	color: #262626;
+	font-family: "PT Sans";
+	font-weight: 400;
+	line-height: 24px;
+	letter-spacing: 0.08px;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+	list-style-type: none;
+	margin-top: 35px;
+    padding: 25px;
+    border-top: 1px solid #e6e6e6;
+}
+
+.tap:hover{
+	color: #48974c;
 }
