--- a/style/style.css
+++ b/style/style.css
@@ -97,3 +97,39 @@ h1{
 .tap:hover{
 	color: #48974c;
 }
+
+.appeal{
+	background-image: url(../images/appeal.png);
+	background-size: cover;
+	height: 579px;
+	background-position: top center;
+	position: relative;
+}
+
+.appeal-text{
+	background: #fff;
+	width: 512px;
+	min-height: 356px;
+	position: absolute;
+	top: 80px;
+	left: 210px;
+	padding: 20px;
+}
+
+h2{
+	color: #404040;
+	font-family: "Cormorant Infant";
+	font-size: 60px;
+	font-weight: 700;
+	line-height: 60px;
+	letter-spacing: 0.3px;
+}
+
+.appeal-p{
+	color: #404040;
+	font-family: "PT Sans";
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 28px;
+	letter-spacing: 0.09px;
+}
