--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,7 @@
 html, body{
 	margin: 0;
 	padding: 0;
+	background-color: #f8f8f8;
 }
 
 .top-line{
@@ -110,9 +111,9 @@ h1{
 	background: #fff;
 	width: 512px;
 	min-height: 356px;
-	position: absolute;
+	position: relative;
 	top: 80px;
-	left: 210px;
+	left: 88px;
 	padding: 20px;
 }
 
@@ -140,4 +141,92 @@ h2{
 
 .finish{
 	padding: 15px 0px 15px 15px;
+}
+
+.information{
+	max-width: 1170px;
+	min-height: 400px;
+	margin-top: 30px;
+}
+
+.container{
+	padding: 5px;
+	display: inline-block;
+	width: 48%;
+}
+
+.big-block{
+	padding: 25px 40px;
+    background: #fff;
+    margin-bottom: 30px;
+}
+
+.data{
+	color: #a6a6a6;
+	font-family: "PT Sans";
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 26px;
+	letter-spacing: 0.07px;
+	letter-spacing: 0.07px;
+	text-transform: uppercase;
+	position: relative;
+	margin: 25px 0 11px 25px;
+}
+
+.data::before{
+	content: "";
+	position: absolute;
+	width: 15px;
+	height: 16px;
+	background-image: url(../images/icon.png);
+	top: 0px;
+	left: -24px;
+}
+
+img{
+	width: 100%;
+}
+
+h3{
+	color: #262626;
+	font-family: "Cormorant Infant";
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 24px;
+	letter-spacing: 0.15px;
+	margin: 10px 0 7px 0;
+}
+
+.big-block>p{
+	color: #737373;
+	font-family: "PT Sans";
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 26px;
+	letter-spacing: 0.08px;
+	margin: 7px 0 11px 0;
+}
+
+.container-mid{
+	max-width: 1005px;
+}
+
+.left-container{
+	margin-left: 65px;
+}
+
+.more-details{
+	margin: 22px 0 25px 0;
+	width: 157px;
+	height: 56px;
+	border: 1px solid #48974c;
+	color: #48974c;
+	background: #fff;
+	font-family: "PT Sans";
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 24px;
+	text-transform: uppercase;
+	letter-spacing: 0.07px;
 }
